# sudoku

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
.github/workflows/: update-dockerhub.yml
include/: cases.h  data.h  sudoku.h  utils.h
src/: cases.c  data.c  main.c  sudoku.c  utils.c
